--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,11 @@
     functions = "functions/"
 
 [[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
