--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:run:search": "cypress run --spec ./cypress/e2e/search.cy.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +52,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "cypress": "^12.3.0",
     "tailwindcss": "^3.0.15"
   }
 }
